@@ -1,10 +1,8 @@
 package org.jabref.logic.xmp;
 
 import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
@@ -31,8 +29,7 @@ public class XmpUtilReader {
     }
 
     /**
-     * Will read the XMPMetadata from the given pdf file, closing the file
-     * afterwards.
+     * Will read the XMPMetadata from the given pdf file, closing the file afterwards.
      *
      * @param path The path to read the XMPMetadata from.
      * @return The XMPMetadata object found in the file
@@ -50,7 +47,7 @@ public class XmpUtilReader {
      * @return BibtexEntryies found in the PDF or an empty list
      */
     public static List<BibEntry> readXmp(String filename, XmpPreferences xmpPreferences) throws IOException {
-        return XmpUtilReader.readXmp(Paths.get(filename), xmpPreferences);
+        return XmpUtilReader.readXmp(Path.of(filename), xmpPreferences);
     }
 
     /**
